Fixing play button on mobile and tablets

--- a/css/starter.scss
+++ b/css/starter.scss
@@ -915,3 +915,11 @@ a.pink:hover {
     left: 0;
 		z-index: 11;
 }
+
+@include media-breakpoint-down(md) {
+	.talk-image {
+		&:after, &:before {
+			display: block;
+		}
+	}
+}
